Fixed card alignment and turned into a square-like form based on device-width@

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -158,7 +158,7 @@ section .cards {
   max-width: 1200px;
   margin-top: 50px;
   padding: 0 10px;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 section .cards .card:hover {
@@ -185,9 +185,10 @@ section .cards .card {
   list-style: none;
   border-radius: 5px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
-  margin-bottom: 40px;
-  width: calc(100% / 3 - 30px);
+  margin: 15px;
+  width: calc(46% - 30px);
   text-align: center;
+  transition-behavior: ease-in-out;
 }
 
 .groups .cards .card {
